--- a/contact.html
+++ b/contact.html
@@ -7,15 +7,15 @@
     <body>
         <nav>
               <ul>
-                <li class="active"><a href="index.html">About</a></li>
+                <li><a href="index.html">About</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="experience.html">Experience</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li class="active"><a href="contact.html">Contact</a></li>
                 <li><a href="sidebar.html">Sidebar Example</a></li>
               </ul>
         </nav>
-        <h1>About</h1>
-        <img alt="self portrait" src="https://i.imgur.com/hri5Zxx.png">
-        <p>I'm Monica, and I like drawing and being bad at video games.</p>
+        <h1>Contact</h1>
+        <p><strong>Email:</strong> wufa5tia@byu.edu</p>
+        <p><strong>Github:</strong> <a href="https://github.com/rakudola">@rakudola</a></p>
     </body>
 </html>
