--- a/experience.html
+++ b/experience.html
@@ -7,15 +7,19 @@
     <body>
         <nav>
               <ul>
-                <li class="active"><a href="index.html">About</a></li>
+                <li><a href="index.html">About</a></li>
                 <li><a href="projects.html">Projects</a></li>
-                <li><a href="experience.html">Experience</a></li>
+                <li class="active"><a href="experience.html">Experience</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="sidebar.html">Sidebar Example</a></li>
               </ul>
         </nav>
-        <h1>About</h1>
-        <img alt="self portrait" src="https://i.imgur.com/hri5Zxx.png">
-        <p>I'm Monica, and I like drawing and being bad at video games.</p>
+        <h1>Experience</h1>
+        <p>(This page is a work in progress)</p>
+        <ul>
+            <li>Dental financial assistant</li>
+            <li>Executive manager</li>
+            <li>Orthodontic web designer</li>
+        </ul>
     </body>
 </html>
