--- a/projects.html
+++ b/projects.html
@@ -7,15 +7,18 @@
     <body>
         <nav>
               <ul>
-                <li class="active"><a href="index.html">About</a></li>
-                <li><a href="projects.html">Projects</a></li>
+                <li><a href="index.html">About</a></li>
+                <li class="active"><a href="projects.html">Projects</a></li>
                 <li><a href="experience.html">Experience</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="sidebar.html">Sidebar Example</a></li>
               </ul>
         </nav>
-        <h1>About</h1>
-        <img alt="self portrait" src="https://i.imgur.com/hri5Zxx.png">
-        <p>I'm Monica, and I like drawing and being bad at video games.</p>
+        <h1>Projects</h1>
+        <ol>
+            <li><a href="https://jtorthodontics.com">JT Orthodontics</a></li>
+            <li>女神一文錄 (parody project; in development)</li>
+            <li>BTRS Epidemic (collaborative short novel; in development)</li>
+        </ol>
     </body>
 </html>
